# trex-rust

./: Cargo.toml  readme.md
src/: main.rs
tests/: test_json.rs
trex/: Cargo.toml
trex/src/: lib.rs
trex_ext/: Cargo.toml
trex_ext/src/: lib.rs
trex_ext/src/serde_trex/: mod.rs
trex_ext/tests/: test_json.rs
trexlib/: Cargo.toml
trexlib/src/: lib.rs
