[package]
name = "trex-paxos"
version = "0.1.0"
authors = ["simbo1905 <simbo1905@60hertz.com>"]
description = "Trex: An embeddable Paxos engine"
repository = "https://github.com/simbo1905/trex-rust"
readme = "README.md"
keywords = ["Paxos", "consensus", "replication", "cluster"]
license = "Apache2"

[[bin]]
doc = false
name = "trex-paxos"
#path = "src/bin/foo.rs"

[dependencies]
trex = { path = "trex" }
trex_ext = { path = "trex_ext" }
serde_json = "1.0"